Output/slurm-735882.out
  File "/gpfs/mariana/home/akkusu/TBT-practice/TBT_for_VGG.py", line 450
    if epsilon == not None:
                  ^^^
SyntaxError: invalid syntax
